# BacktestTradeSim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
include/: Strategy.hpp
include/data/: DataFetcher.hpp  SecurityData.hpp
include/strategies/: DollarCostAveraging.hpp  Strategy.hpp
include/util/: Broker.hpp  Portfolio.hpp  Security.hpp  Stock.hpp  Transaction.hpp
src/: main.cpp
src/data/: DataFetcher.cpp  SecurityData.cpp
src/data/fetchedData/: SPY.txt
src/strategies/: DollarCostAveraging.cpp  Strategy.cpp
src/util/: Broker.cpp  Portfolio.cpp  Security.cpp  Transaction.cpp
